--- a/src/scss/components-styles/PagePreview.scss
+++ b/src/scss/components-styles/PagePreview.scss
@@ -41,7 +41,8 @@
 }
 
 .page-preview-navigation {
-  font-family: 'FuturaPT-bold';
+  font-family: 'FuturaPT';
+  font-weight: 700;
   &__body {
     display: flex;
     justify-content: center;
