--- a/src/scss/pages-styles/Contacts.scss
+++ b/src/scss/pages-styles/Contacts.scss
@@ -9,7 +9,8 @@
 }
 
 .contacts-switch-list {
-    font-family: 'FuturaPT-bold';
+    font-family: 'FuturaPT';
+    font-weight: 700;
     display: flex;
     align-items: center;
     justify-content: space-between;
