--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -82,6 +82,7 @@ body {
 @import "components-styles/PagePreview";
 @import "components-styles/PlusToMinus";
 @import "components-styles/Pagination";
+@import "components-styles/Carousel";
 
 
 //<ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ>=============================================================
@@ -99,3 +100,4 @@ body {
 @import "pages-styles/Libraries";
 @import "pages-styles/Main";
 @import "pages-styles/Services";
+@import "pages-styles/SearchingResult";
