--- a/src/scss/components-styles/Navigation.scss
+++ b/src/scss/components-styles/Navigation.scss
@@ -27,9 +27,10 @@
     padding-right: 0;
   }
   &__body {
+  font-family: 'FuturaPT';
+  font-weight: 500;
   padding: 15px 0;
   position: relative;
-  font-family: 'FuturaPT-regular';
   &:after {
     content: '';
     position: absolute;
@@ -37,7 +38,6 @@
     bottom: 10px;
     left: 50%;
     width: 0px;
-    //border-bottom: 2px solid #3b3b3b;
     border-bottom: 2px solid #ff9902;
     transition: all 0.3s ease-in-out;
   }
@@ -45,7 +45,6 @@
     left: 0;
     right: 0;
     width: 100%;
-    //border-bottom: 2px solid #3b3b3b;
     border-bottom: 2px solid #ff9902;
   }
   }
@@ -78,20 +77,18 @@
 .dropdown-body {
   position: absolute;
   top: 10px;
-  //transition: 2s ease-in-out;
   z-index: 3;
-  ///
   box-shadow: 0 0 0 1px rgba(128,128,128,.5);
   background: rgba(0,0,0,.7);
-  //background: #fff;
   width: 230px;
 }
 
 .dropdown-list {
   margin: 5px 0;
   &__item {
+    font-family: 'FuturaPT';
+    font-weight: 300;
     padding: 5px 10px;
-    font-family: 'FuturaPT-light';
     @media (max-width: $md2+px) {
       padding: 8px 0 8px 20px;
     }
@@ -214,7 +211,8 @@
 }
 
 .navigation-item-mobile-version {
-  font-family: 'FuturaPT-bold';
+  font-family: 'FuturaPT';
+  font-weight: 700;
   display: flex;
   justify-content: space-between;
   align-items: center;
