--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,32 +1,33 @@
- @font-face {
-   font-family: 'FuturaPT-exBold';
-   src:  url(../assets/fonts/FuturaPT/futura-pt-extra-bold.ttf) format('truetype');
- }
-
- @font-face {
-  font-family: 'FuturaPT-bold';
-  src:  url(../assets/fonts/FuturaPT/futura-pt-bold.ttf) format('truetype');
+@font-face {
+   font-family: 'FuturaPT-book';
+   src: url('../assets/fonts/FuturaPT/futura-pt-book.eot');
+   src: local('☺'), url('../assets/fonts/FuturaPT/futura-pt-book.woff') format('woff'), url('../assets/fonts/FuturaPT/futura-pt-book.ttf') format('truetype'), url('../assets/fonts/FuturaPT/futura-pt-book.svg') format('svg');
+   font-weight: normal;
+   font-style: normal;
 }
 
 @font-face {
-  font-family: 'FuturaPT-regular';
-  src:  url(../assets/fonts/FuturaPT/futura-pt-medium.ttf) format('truetype');
+  font-family: 'FuturaPT';
+  src: url('../assets/fonts/FuturaPT/futura-pt-light.eot');
+  src: local('☺'), url('../assets/fonts/FuturaPT/futura-pt-light.woff') format('woff'), url('../assets/fonts/FuturaPT/futura-pt-light.ttf') format('truetype'), url('../assets/fonts/FuturaPT/futura-pt-light.svg') format('svg');
+  font-weight: 300;
+  font-style: normal;
+}
+
+
+@font-face {
+  font-family: 'FuturaPT';
+  src: url('../assets/fonts/FuturaPT/futura-pt-medium.eot');
+  src: local('☺'), url('../assets/fonts/FuturaPT/futura-pt-medium.woff') format('woff'), url('../assets/fonts/FuturaPT/futura-pt-medium.ttf') format('truetype'), url('../assets/fonts/FuturaPT/futura-pt-medium.svg') format('svg');
+  font-weight: 500;
+  font-style: normal;
 }
 
 @font-face {
-  font-family: 'FuturaPT-light';
-  src:  url(../assets/fonts/FuturaPT/futura-pt-light.ttf) format('truetype');
+  font-family: 'FuturaPT';
+  src: url('../assets/fonts/FuturaPT/futura-pt-bold.eot');
+  src: local('☺'), url('../assets/fonts/FuturaPT/futura-pt-bold.woff') format('woff'), url('../assets/fonts/FuturaPT/futura-pt-bold.ttf') format('truetype'), url('../assets/fonts/FuturaPT/futura-pt-bold.svg') format('svg');
+  font-weight: 700;
+  font-style: normal;
 }
-
-@font-face {
-  font-family: 'FuturaPT-book';
-  src:  url(../assets/fonts/FuturaPT/futura-pt-book.ttf) format('truetype');
-}
-
- @font-face {
-   font-family: 'Caveat';
-   src:  url(../assets/fonts/Caveat/Caveat-Regular.ttf) format('truetype');
- }
-
-
 
