--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -1,6 +1,7 @@
 //</ГОТОВЫЕ КЛАССЫ>====================================================================================================
 ._title {
-  font-family: 'FuturaPT-bold';
+  font-family: 'FuturaPT';
+  font-weight: 700;
   font-size: 55px;
   line-height: 1.3;
   text-align: center;
@@ -8,16 +9,16 @@
 }
 
 ._subtitle {
+  font-family: 'FuturaPT';
+  font-weight: 500;
   font-size: 40px;
-  font-family: 'FuturaPT-regular';
   margin-bottom: 20px;
-  font-weight: bold;
 }
 
 ._heading {
-  font-size: 30px;
   font-family: 'FuturaPT-book';
   font-weight: bold;
+  font-size: 30px;
   padding-bottom: 10px;
   color: rgb(22, 22, 39);
 }
